CodeGen/util_files/project.output
Terminals unused in grammar

    POW_OP
    TRUE
    FALSE


State 25 conflicts: 1 shift/reduce
State 47 conflicts: 1 shift/reduce
State 69 conflicts: 2 shift/reduce
State 74 conflicts: 1 shift/reduce
State 77 conflicts: 1 shift/reduce
State 124 conflicts: 2 shift/reduce
State 125 conflicts: 2 shift/reduce
State 126 conflicts: 2 shift/reduce
State 127 conflicts: 2 shift/reduce
State 192 conflicts: 1 shift/reduce


Grammar

    0 $accept: translation_unit $end

    1 $@1: %empty

    2 translation_unit: $@1 external_declaration
    3                 | translation_unit external_declaration

    4 external_declaration: mulendoflines
    5                     | function_definition
    6                     | declaration

    7 $@2: %empty

    8 $@3: %empty

    9 function_definition: IDENTIFIER $@2 parameter_list ARROW error_fun type_specifier $@3 EOL compound_statement

   10 error_fun: %empty
   11          | error

   12 parameter_list: %empty
   13               | ':' parameters

   14 parameters: type_specifier IDENTIFIER
   15           | parameters ',' type_specifier IDENTIFIER

   16 type_specifier: VOID
   17               | BOOL
   18               | STRING
   19               | INT
   20               | LONG
   21               | DOUBLE
   22               | FRAC
   23               | POINT
   24               | PARABOLA
   25               | ELLIPSE
   26               | HYPERBOLA
   27               | CIRCLE
   28               | CONIC
   29               | LINE
   30               | LINE_PAIR

   31 in_out_specifier: INPUT
   32                 | OUTPUT

   33 compound_statement: FUN_ST FUN_EN
   34                   | FUN_ST temp_fun statement_list FUN_EN

   35 temp_fun: %empty

   36 expression_statement: EOL
   37                     | expression EOL

   38 expression: assignment_expression
   39           | expression ',' assignment_expression

   40 assignment_expression: conditional_expression
   41                      | unary_expression assignment_operator assignment_expression

   42 assignment_operator: '='
   43                    | MUL_ASSIGN
   44                    | ADD_ASSIGN

   45 conditional_expression: logical_or_expression

   46 logical_or_expression: logical_and_expression
   47                      | logical_or_expression OR_OP logical_and_expression

   48 logical_and_expression: equality_expression
   49                       | logical_and_expression AND_OP equality_expression

   50 equality_expression: relational_expression
   51                    | equality_expression EQ_OP relational_expression
   52                    | equality_expression NE_OP relational_expression

   53 relational_expression: additive_expression
   54                      | relational_expression '<' additive_expression
   55                      | relational_expression '>' additive_expression
   56                      | relational_expression LE_OP additive_expression
   57                      | relational_expression GE_OP additive_expression

   58 additive_expression: multiplicative_expression
   59                    | additive_expression '+' multiplicative_expression
   60                    | additive_expression '-' multiplicative_expression

   61 multiplicative_expression: cast_expression
   62                          | multiplicative_expression '*' cast_expression
   63                          | multiplicative_expression '/' cast_expression
   64                          | multiplicative_expression '%' cast_expression

   65 cast_expression: unary_expression
   66                | '(' type_specifier ')' cast_expression

   67 unary_expression: postfix_expression
   68                 | unary_operator cast_expression

   69 unary_operator: '+'
   70               | '-'
   71               | '!'

   72 postfix_expression: primary_expression
   73                   | postfix_expression '(' ')'
   74                   | postfix_expression '(' argument_expression_list ')'

   75 primary_expression: IDENTIFIER
   76                   | INT_CONST
   77                   | FRAC_CONST
   78                   | DOUBLE_CONST
   79                   | STRING_LITERAL
   80                   | '(' expression ')'

   81 argument_expression_list: assignment_expression
   82                         | argument_expression_list ',' assignment_expression

   83 statement_list: statement
   84               | statement_list statement

   85 statement: declaration
   86          | compound_statement
   87          | expression_statement
   88          | selection_statement
   89          | iteration_statement
   90          | jump_statement
   91          | in_out_statement

   92 declaration: type_specifier init_declarator_list EOL
   93            | type_specifier mulendoflines init_declarator_list EOL

   94 mulendoflines: EOL
   95              | mulendoflines EOL

   96 init_declarator_list: init_declarator
   97                     | init_declarator_list ',' init_declarator

   98 init_declarator: declarator
   99                | declarator '=' initializer
  100                | declarator ':' initializer_list

  101 initializer_list: initializer
  102                 | initializer_list ',' initializer

  103 declarator: direct_declarator

  104 $@4: %empty

  105 direct_declarator: IDENTIFIER $@4

  106 $@5: %empty

  107 direct_declarator: type_specifier $@5
  108                  | '(' declarator ')'
  109                  | direct_declarator '(' parameter_list ')'
  110                  | direct_declarator '(' identifier_list ')'
  111                  | direct_declarator '(' ')'

  112 $@6: %empty

  113 identifier_list: IDENTIFIER $@6

  114 $@7: %empty

  115 identifier_list: identifier_list ',' IDENTIFIER $@7

  116 initializer: assignment_expression

  117 selection_statement: IF '(' expression ')' EOL compound_statement EOL ELSE EOL compound_statement
  118                    | IF '(' expression ')' EOL compound_statement

  119 iteration_statement: LOOP '(' expression ')' EOL compound_statement

  120 jump_statement: CONTINUE EOL
  121               | BREAK EOL
  122               | EXIT exit

  123 exit: EOL
  124     | ':' expression EOL

  125 $@8: %empty

  126 in_out_statement: in_out_specifier $@8 ':' initializer_list


Terminals, with rules where they appear

    $end (0) 0
    '!' <obj> (33) 71
    '%' (37) 64
    '(' (40) 66 73 74 80 108 109 110 111 117 118 119
    ')' (41) 66 73 74 80 108 109 110 111 117 118 119
    '*' (42) 62
    '+' <obj> (43) 59 69
    ',' (44) 15 39 82 97 102 115
    '-' <obj> (45) 60 70
    '/' (47) 63
    ':' (58) 13 100 124 126
    '<' (60) 54
    '=' <obj> (61) 42 99
    '>' (62) 55
    error (256) 11
    IDENTIFIER <obj> (258) 9 14 15 75 105 113 115
    STRING_LITERAL <obj> (259) 79
    FRAC_CONST <obj> (260) 77
    DOUBLE_CONST <obj> (261) 78
    INT_CONST <obj> (262) 76
    ARROW <obj> (263) 9
    LE_OP <obj> (264) 56
    GE_OP <obj> (265) 57
    EQ_OP <obj> (266) 51
    NE_OP <obj> (267) 52
    POW_OP <obj> (268)
    AND_OP <obj> (269) 49
    OR_OP <obj> (270) 47
    MUL_ASSIGN <obj> (271) 43
    ADD_ASSIGN <obj> (272) 44
    FUN_ST <obj> (273) 33 34
    FUN_EN <obj> (274) 33 34
    STRING <obj> (275) 18
    INT <obj> (276) 19
    LONG <obj> (277) 20
    BOOL <obj> (278) 17
    FRAC <obj> (279) 22
    DOUBLE <obj> (280) 21
    VOID <obj> (281) 16
    EOL <obj> (282) 9 36 37 92 93 94 95 117 118 119 120 121 123 124
    TRUE <obj> (283)
    FALSE <obj> (284)
    INPUT <obj> (285) 31
    OUTPUT <obj> (286) 32
    IF <obj> (287) 117 118
    ELSE <obj> (288) 117
    LOOP <obj> (289) 119
    CONTINUE <obj> (290) 120
    BREAK <obj> (291) 121
    EXIT <obj> (292) 122
    POINT <obj> (293) 23
    LINE <obj> (294) 29
    CONIC <obj> (295) 28
    LINE_PAIR <obj> (296) 30
    CIRCLE <obj> (297) 27
    PARABOLA <obj> (298) 24
    ELLIPSE <obj> (299) 25
    HYPERBOLA <obj> (300) 26


Nonterminals, with rules where they appear

    $accept (59)
        on left: 0
    translation_unit <obj> (60)
        on left: 2 3
        on right: 0 3
    $@1 (61)
        on left: 1
        on right: 2
    external_declaration <obj> (62)
        on left: 4 5 6
        on right: 2 3
    function_definition <obj> (63)
        on left: 9
        on right: 5
    $@2 (64)
        on left: 7
        on right: 9
    $@3 (65)
        on left: 8
        on right: 9
    error_fun (66)
        on left: 10 11
        on right: 9
    parameter_list <obj> (67)
        on left: 12 13
        on right: 9 109
    parameters <obj> (68)
        on left: 14 15
        on right: 13 15
    type_specifier <obj> (69)
        on left: 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30
        on right: 9 14 15 66 92 93 107
    in_out_specifier <obj> (70)
        on left: 31 32
        on right: 126
    compound_statement <obj> (71)
        on left: 33 34
        on right: 9 86 117 118 119
    temp_fun <obj> (72)
        on left: 35
        on right: 34
    expression_statement <obj> (73)
        on left: 36 37
        on right: 87
    expression <obj> (74)
        on left: 38 39
        on right: 37 39 80 117 118 119 124
    assignment_expression <obj> (75)
        on left: 40 41
        on right: 38 39 41 81 82 116
    assignment_operator <obj> (76)
        on left: 42 43 44
        on right: 41
    conditional_expression <obj> (77)
        on left: 45
        on right: 40
    logical_or_expression <obj> (78)
        on left: 46 47
        on right: 45 47
    logical_and_expression <obj> (79)
        on left: 48 49
        on right: 46 47 49
    equality_expression <obj> (80)
        on left: 50 51 52
        on right: 48 49 51 52
    relational_expression <obj> (81)
        on left: 53 54 55 56 57
        on right: 50 51 52 54 55 56 57
    additive_expression <obj> (82)
        on left: 58 59 60
        on right: 53 54 55 56 57 59 60
    multiplicative_expression <obj> (83)
        on left: 61 62 63 64
        on right: 58 59 60 62 63 64
    cast_expression <obj> (84)
        on left: 65 66
        on right: 61 62 63 64 66 68
    unary_expression <obj> (85)
        on left: 67 68
        on right: 41 65
    unary_operator <obj> (86)
        on left: 69 70 71
        on right: 68
    postfix_expression <obj> (87)
        on left: 72 73 74
        on right: 67 73 74
    primary_expression <obj> (88)
        on left: 75 76 77 78 79 80
        on right: 72
    argument_expression_list <obj> (89)
        on left: 81 82
        on right: 74 82
    statement_list <obj> (90)
        on left: 83 84
        on right: 34 84
    statement <obj> (91)
        on left: 85 86 87 88 89 90 91
        on right: 83 84
    declaration <obj> (92)
        on left: 92 93
        on right: 6 85
    mulendoflines <obj> (93)
        on left: 94 95
        on right: 4 93 95
    init_declarator_list <obj> (94)
        on left: 96 97
        on right: 92 93 97
    init_declarator <obj> (95)
        on left: 98 99 100
        on right: 96 97
    initializer_list <obj> (96)
        on left: 101 102
        on right: 100 102 126
    declarator <obj> (97)
        on left: 103
        on right: 98 99 100 108
    direct_declarator <obj> (98)
        on left: 105 107 108 109 110 111
        on right: 103 109 110 111
    $@4 (99)
        on left: 104
        on right: 105
    $@5 (100)
        on left: 106
        on right: 107
    identifier_list <obj> (101)
        on left: 113 115
        on right: 110 115
    $@6 (102)
        on left: 112
        on right: 113
    $@7 (103)
        on left: 114
        on right: 115
    initializer <obj> (104)
        on left: 116
        on right: 99 101 102
    selection_statement <obj> (105)
        on left: 117 118
        on right: 88
    iteration_statement <obj> (106)
        on left: 119
        on right: 89
    jump_statement <obj> (107)
        on left: 120 121 122
        on right: 90
    exit <obj> (108)
        on left: 123 124
        on right: 122
    in_out_statement <obj> (109)
        on left: 126
        on right: 91
    $@8 (110)
        on left: 125
        on right: 126


State 0

    0 $accept: . translation_unit $end

    $default  reduce using rule 1 ($@1)

    translation_unit  go to state 1
    $@1               go to state 2


State 1

    0 $accept: translation_unit . $end
    3 translation_unit: translation_unit . external_declaration

    $end        shift, and go to state 3
    IDENTIFIER  shift, and go to state 4
    STRING      shift, and go to state 5
    INT         shift, and go to state 6
    LONG        shift, and go to state 7
    BOOL        shift, and go to state 8
    FRAC        shift, and go to state 9
    DOUBLE      shift, and go to state 10
    VOID        shift, and go to state 11
    EOL         shift, and go to state 12
    POINT       shift, and go to state 13
    LINE        shift, and go to state 14
    CONIC       shift, and go to state 15
    LINE_PAIR   shift, and go to state 16
    CIRCLE      shift, and go to state 17
    PARABOLA    shift, and go to state 18
    ELLIPSE     shift, and go to state 19
    HYPERBOLA   shift, and go to state 20

    external_declaration  go to state 21
    function_definition   go to state 22
    type_specifier        go to state 23
    declaration           go to state 24
    mulendoflines         go to state 25


State 2

    2 translation_unit: $@1 . external_declaration

    IDENTIFIER  shift, and go to state 4
    STRING      shift, and go to state 5
    INT         shift, and go to state 6
    LONG        shift, and go to state 7
    BOOL        shift, and go to state 8
    FRAC        shift, and go to state 9
    DOUBLE      shift, and go to state 10
    VOID        shift, and go to state 11
    EOL         shift, and go to state 12
    POINT       shift, and go to state 13
    LINE        shift, and go to state 14
    CONIC       shift, and go to state 15
    LINE_PAIR   shift, and go to state 16
    CIRCLE      shift, and go to state 17
    PARABOLA    shift, and go to state 18
    ELLIPSE     shift, and go to state 19
    HYPERBOLA   shift, and go to state 20

    external_declaration  go to state 26
    function_definition   go to state 22
    type_specifier        go to state 23
    declaration           go to state 24
    mulendoflines         go to state 25


State 3

    0 $accept: translation_unit $end .

    $default  accept


State 4

    9 function_definition: IDENTIFIER . $@2 parameter_list ARROW error_fun type_specifier $@3 EOL compound_statement

    $default  reduce using rule 7 ($@2)

    $@2  go to state 27


State 5

   18 type_specifier: STRING .

    $default  reduce using rule 18 (type_specifier)


State 6

   19 type_specifier: INT .

    $default  reduce using rule 19 (type_specifier)


State 7

   20 type_specifier: LONG .

    $default  reduce using rule 20 (type_specifier)


State 8

   17 type_specifier: BOOL .

    $default  reduce using rule 17 (type_specifier)


State 9

   22 type_specifier: FRAC .

    $default  reduce using rule 22 (type_specifier)


State 10

   21 type_specifier: DOUBLE .

    $default  reduce using rule 21 (type_specifier)


State 11

   16 type_specifier: VOID .

    $default  reduce using rule 16 (type_specifier)


State 12

   94 mulendoflines: EOL .

    $default  reduce using rule 94 (mulendoflines)


State 13

   23 type_specifier: POINT .

    $default  reduce using rule 23 (type_specifier)


State 14

   29 type_specifier: LINE .

    $default  reduce using rule 29 (type_specifier)


State 15

   28 type_specifier: CONIC .

    $default  reduce using rule 28 (type_specifier)


State 16

   30 type_specifier: LINE_PAIR .
